# glamour-vk-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.production.yml  docker-compose.yml  package-lock.json
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/routes/: __init__.py  appointments.py  auth.py  clients.py  masters.py  meta.py  notifications.py  schedules.py  services.py  stats.py  vk.py
backend/app/core/: enums.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  appointment.py  audit_log.py  bot_session.py  client.py  master.py  notification.py  schedule.py  service.py
backend/app/schemas/: __init__.py  appointment.py  auth.py  client.py  master.py  notification.py  schedule.py  service.py  stats.py  vk.py
backend/app/scripts/: __init__.py  process_notifications.py  seed_demo.py
backend/app/services/: __init__.py  appointments.py  audit.py  notifications.py  vk.py  vk_api.py
backend/glamour_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth_and_vk.py  test_booking.py
deploy/: Caddyfile
deploy/nginx/: glamour.conf
deploy/systemd/: glamour.service
docs/: architecture.md  deployment-ubuntu-shared.md  deployment.md
docs/report/: Glamour_report_intro_ch1.docx  Glamour_report_intro_ch1_expanded.docx  (+5 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
(+7 files in other folders)
